modules/gdscript/tests/scripts/analyzer/errors/for_loop_on_hard_float.gd
func test():
	var hard_float := 1.0

	for x in hard_float:
		if x is String:
			pass
